# solar-activity-imaging-application

./: .gitignore  pyproject.toml  test.txt
saia/: main.py  sdo.py
tests/: test_img_info.py  test_sdo.py
