[tool.poetry]
name = "saia"
version = "0.1.0"
description = ""
authors = ["Jakub Mieszczak"]
readme = "README.md"
packages = [{ include = "saia" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
httpx = "^0.25.1"
pyside6 = "^6.6.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
saia = 'saia.main:main'

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pylama = { extras = ["toml"], version = "^8.4.1" }
setuptools = "^69.0.2"                             # Required by pylama

[tool.black]
line_length = 120

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
